# cin

./: .gitignore  README.md  _ _init_ _.py  _ _main_ _.py  pyproject.toml  which.py
cin/: __main__.py  dirs.py  main.py  source.py
src/cin/: __main__.py
