[tool.poetry]
name = "cin"
version = "0.0.1"
description = ""
authors = ["akash1047 <94453657+akash1047@users.noreply.github.com>"]
# license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cin = "cin.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
